# nimbro-camera-ids

./: .dockerignore  .gitmodules  README.md  package.xml  requirements.txt  setup.cfg  setup.py
camera_ids/: camera_ids.py  camera_ids_publisher.py  node_camera_ids.py  setup.py
camera_ids/camera_ids/: camera_ids.py  camera_ids_publisher.py  publish_camera_ids.py
camera_ids/scripts/: publish.py  publish_camera_ids.py
docker/: Dockerfile  build.sh  run.sh
nimbro-ids-ros2/: publish_camera_ids.py
nimbro_camera_ids/: camera_ids.py  corrector_colors.py  manager_auto_features.py  node_camera_ids.py
nimbro_camera_ids/configs/: 5k.cset  default.cset  original.cset
nimbro_camera_ids/resources/: intrinsics.yaml
nimbro_camera_ids/scripts/: spin_camera_ids.py
resources/: U3-36PxXLS-C_3.30.21242.guf
scripts/: add_udev_rule.sh  set_usb_buffer_memory.sh  start_all.sh  start_camera.sh  start_camera_tmux.sh  start_watchdog.sh  start_watchdog_tmux.sh
